--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <browser>chrome</browser>
         <parallel>classes</parallel>
         <threadCount>1</threadCount>
+        <language>en</language>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -54,6 +55,14 @@
             <artifactId>allure-testng</artifactId>
             <version>2.29.1</version> <!-- Latest -->
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.18.2</version>
+        </dependency>
+
 
     </dependencies>
 
@@ -94,6 +103,7 @@
                         <browser>${browser}</browser>
                         <parallel>${parallel}</parallel>
                         <threadCount>${threadCount}</threadCount>
+                        <language>${language}</language>
                     </systemPropertyVariables>
                 </configuration>
                 <dependencies>
