--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <aspectj.version>1.9.22.1</aspectj.version>
-        <suiteXmlFile>src/test/resources/test.xml</suiteXmlFile>
+        <suiteXmlFile>src/test/resources/vietjet.xml</suiteXmlFile>
         <browser>chrome</browser>
         <parallel>classes</parallel>
         <threadCount>1</threadCount>
@@ -62,7 +62,6 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.18.2</version>
         </dependency>
-
 
     </dependencies>
 
