--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <browser>chrome</browser>
         <parallel>classes</parallel>
         <threadCount>1</threadCount>
-        <language>ko</language>
+        <language>en</language>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
