--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,11 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <aspectj.version>1.9.22.1</aspectj.version>
-        <suiteXmlFile>src/test/resources/test.xml</suiteXmlFile>
+        <suiteXmlFile>src/test/resources/vietjetTest.xml</suiteXmlFile>
         <browser>chrome</browser>
         <parallel>classes</parallel>
         <threadCount>1</threadCount>
+        <language>en</language>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -54,6 +55,22 @@
             <artifactId>allure-testng</artifactId>
             <version>2.29.1</version> <!-- Latest -->
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.18.2</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
+        </dependency>
+
 
     </dependencies>
 
@@ -94,6 +111,7 @@
                         <browser>${browser}</browser>
                         <parallel>${parallel}</parallel>
                         <threadCount>${threadCount}</threadCount>
+                        <language>${language}</language>
                     </systemPropertyVariables>
                 </configuration>
                 <dependencies>
