Fix issue with ci

--- a/src/test/resources/browser-config.properties
+++ b/src/test/resources/browser-config.properties
@@ -1,13 +1,13 @@
 # Chrome
 chrome.browser=chrome
 chrome.isMaximized=false
-chrome.headless=false
+chrome.headless=true
 chrome.gridUrl=
 
 # Firefox
 firefox.browser=firefox
 firefox.isMaximized=true
-firefox.headless=false
+firefox.headless=true
 firefox.gridUrl=
 
 # Edge
@@ -19,11 +19,11 @@ edge.gridUrl=
 # Safari
 safari.browser=safari
 safari.isMaximized=true
-safari.headless=false
+safari.headless=true
 safari.gridUrl=
 
 # Internet Explorer
 ie.browser=internet explorer
 ie.isMaximized=true
-ie.headless=false
+ie.headless=true
 ie.gridUrl=
