--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -1,10 +1,9 @@
 name: Run Tests and Send Allure Report
 
 on:
-  workflow_dispatch: # Cho phép chạy thủ công
+  workflow_dispatch:
   schedule:
-    # Chạy vào 9h sáng hàng ngày (giờ UTC)
-    - cron: "0 9 * * *"
+    - cron: "0 10 * * *"
 
 jobs:
   run-tests-and-send-report:
@@ -12,41 +11,57 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Bước 1: Checkout mã nguồn
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Bước 2: Thiết lập môi trường JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      # Bước 3: Chạy kiểm thử với Maven
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      - name: Install Xvfb
+        run: sudo apt-get update && sudo apt-get install -y xvfb
+
+      - name: Start Xvfb
+        run: Xvfb :1 -screen 0 1920x1080x24 &
+
+      - name: Set DISPLAY variable
+        run: export DISPLAY=:1
+
       - name: Run Maven Tests
+        env:
+          DISPLAY: :1 # Quan trọng: Truyền biến DISPLAY vào quá trình chạy Maven
         run: mvn clean test allure:report
 
       - name: Get Current Date and Time
         id: date
-        run: echo "timestamp=$(date +"%Y-%m-%d_%H-%M-%S")" >> $GITHUB_ENV # Lấy ngày giờ
+        run: echo "timestamp=$(date '+%Y-%m-%d_%H-%M-%S')" >> $GITHUB_ENV
 
-      # Bước 4: Tạo file ZIP cho báo cáo Allure
       - name: Archive Allure Report
         run: |
           mkdir -p report
-          zip -r "report/allure-report_${{ env.timestamp }}.zip" target/site/allure-maven-plugin
+          cd target/allure-results
+          zip -r ../../../report/allure-report_${{ env.timestamp }}.zip *
+          cd ../../..
 
-      # Bước 5: Gửi báo cáo qua email
       - name: Send Email with Test Report
         uses: dawidd6/action-send-mail@v3
         with:
-          to: lqthai07t3@gmail.com # Email nhận
-          from: thai07t3@gmail.com # Email gửi
-          smtp-server: smtp.gmail.com
-          smtp-port: 587
-          username: ${{ secrets.SMTP_USERNAME }} # Đã thêm vào GitHub Secrets
-          password: ${{ secrets.SMTP_PASSWORD }} # Đã thêm vào GitHub Secrets
+          to: lqthai07t3@gmail.com
+          from: thai07t3@gmail.com
+          smtp_server: smtp.gmail.com
+          smtp_port: 587
+          username: ${{ secrets.SMTP_USERNAME }}
+          password: ${{ secrets.SMTP_PASSWORD }}
           subject: "(${{ env.timestamp }}) - Test Report - Allure"
           body: |
             <h2>Test Report</h2>
@@ -54,5 +69,5 @@ jobs:
             <p>Đây là báo cáo kiểm thử tự động từ GitHub Actions.</p>
             <p>Thời gian kiểm thử: <strong>${{ env.timestamp }}</strong></p>
             <p>Vui lòng xem báo cáo đính kèm.</p>
-          content-type: text/html
-          attachments: report/allure-report.zip
+          content_type: text/html
+          attachments: report/allure-report_${{ env.timestamp }}.zip
