--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -43,10 +43,12 @@ jobs:
         run: mvn clean test allure:report
 
       - name: Get Current Date and Time
+        if: always()
         id: date
         run: echo "timestamp=$(date '+%Y-%m-%d_%H-%M-%S')" >> $GITHUB_ENV
 
       - name: Archive Allure Report
+        if: always()
         run: |
           mkdir -p report
           cd target/allure-results
