--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -61,16 +61,16 @@ jobs:
         with:
           to: lqthai07t3@gmail.com
           from: thai07t3@gmail.com
-          smtp_server: smtp.gmail.com
-          smtp_port: 587
+          smtp-server: smtp.gmail.com
+          smtp-port: 587
           username: ${{ secrets.SMTP_USERNAME }}
           password: ${{ secrets.SMTP_PASSWORD }}
           subject: "(${{ env.timestamp }}) - Test Report - Allure"
           body: |
             <h2>Test Report</h2>
-            <p>Kết quả test: <strong>${{ jobs.run-tests-and-send-report.outcome }}</strong></p>
-            <p>Thời gian: ${{ steps.date.outputs.timestamp }}</p>
-            <p>Link to workflow: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}</p>
+            <p>Chào bạn,</p>
+            <p>Đây là báo cáo kiểm thử tự động từ GitHub Actions.</p>
+            <p>Thời gian kiểm thử: <strong>${{ env.timestamp }}</strong></p>
             <p>Vui lòng xem báo cáo đính kèm.</p>
           content_type: text/html
           attachments: report/allure-report_${{ env.timestamp }}.zip
