--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -28,6 +28,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
+      - name: Install Allure CLI
+        run: |
+            curl -o allure.zip -L https://github.com/allure-framework/allure2/releases/download/2.32.0/allure-2.32.0.zip
+            sudo unzip -o allure.zip -d /opt/allure
+            sudo ln -s /opt/allure/allure /usr/bin/allure
+
       - name: Install Xvfb
         run: sudo apt-get update && sudo apt-get install -y xvfb
 
@@ -39,7 +45,7 @@ jobs:
 
       - name: Run Maven Tests
         env:
-          DISPLAY: :1 # Quan trọng: Truyền biến DISPLAY vào quá trình chạy Maven
+          DISPLAY: :1 # IMPORTANT: Set the DISPLAY environment variable
         run: mvn clean test
 
       - name: Get Current Date and Time
@@ -47,28 +53,28 @@ jobs:
         id: date
         run: echo "timestamp=$(date '+%Y-%m-%d_%H-%M-%S')" >> $GITHUB_ENV
 
-      - name: Generate Allure Report
+      - name: Generate Allure Report (HTML)
         if: always()
         run: |
-          allure generate ./target/allure-results -c -o report/allure-report_${timestamp}
-          zip -r report/allure-report_${timestamp}.zip allure-zip/allure-report_${timestamp}
+          allure generate target/allure-results --single-file --clean -o allure-report
+          mv allure-report/index.html allure-report/${{ env.timestamp }}_report_.html
 
-      - name: Send Email with Test Report
+      - name: Send Email with Allure HTML Report
         if: always()
         uses: dawidd6/action-send-mail@v4
         with:
-          to: lqthai07t3@gmail.com
-          from: thai07t3@gmail.com
           server_address: smtp.gmail.com
           server_port: 465
           secure: true
           username: ${{ secrets.SMTP_USERNAME }}
           password: ${{ secrets.SMTP_PASSWORD }}
           subject: "(${{ env.timestamp }}) - Test Report - Allure"
+          to: lqthai07t3@gmail.com
+          from: thai07t3@gmail.com
           html_body: |
             <h2>Test Report</h2>
             <p>Chào bạn,</p>
             <p>Đây là báo cáo kiểm thử tự động từ GitHub Actions.</p>
-#            <p>Thời gian kiểm thử: <strong>${{ env.timestamp }}</strong></p>
-#            <p>Vui lòng xem báo cáo đính kèm.</p>
-#          attachments: report/allure-report_${{ env.timestamp }}.zip
+            <p>Thời gian kiểm thử: <strong>${{ env.timestamp }}</strong></p>
+            <p>Vui lòng xem báo cáo HTML đính kèm.</p>
+          attachments: allure-report/${{ env.timestamp }}_report_.html
