--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
             curl -o allure.zip -L https://github.com/allure-framework/allure2/releases/download/2.32.0/allure-2.32.0.zip
             sudo unzip -o allure.zip -d /opt/allure
-            sudo ln -s /opt/allure/allure /usr/bin/allure
+            sudo ln -s /opt/allure/allure-2.32.0 /usr/bin/allure
 
       - name: Verify Allure Installation
         run: allure --version
