--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -34,17 +34,17 @@ jobs:
             sudo unzip -o allure.zip -d /opt/allure
             sudo ln -s /opt/allure/allure-2.32.0/bin/allure /usr/bin/allure
 
-#      - name: Verify Allure Installation
-#        run: allure --version
-#
-#      - name: Install Xvfb
-#        run: sudo apt-get update && sudo apt-get install -y xvfb
-#
-#      - name: Start Xvfb
-#        run: Xvfb :1 -screen 0 1920x1080x24 &
-#
-#      - name: Set DISPLAY variable
-#        run: export DISPLAY=:1
+      - name: Verify Allure Installation
+        run: allure --version
+
+      - name: Install Xvfb
+        run: sudo apt-get update && sudo apt-get install -y xvfb
+
+      - name: Start Xvfb
+        run: Xvfb :1 -screen 0 1920x1080x24 &
+
+      - name: Set DISPLAY variable
+        run: export DISPLAY=:1
 
       - name: Restore Allure history from cache
         uses: actions/cache@v3
@@ -54,8 +54,8 @@ jobs:
           key: allure-history-cache
 
       - name: Run Maven Tests
-#        env:
-#          DISPLAY: :1 # IMPORTANT: Set the DISPLAY environment variable
+        env:
+          DISPLAY: :1 # IMPORTANT: Set the DISPLAY environment variable
         run: mvn clean test -DretryType=immediate -DretryCount=1 -DthreadCount=3 -Dparallel=methods
 
       - name: Copy cached history to results
