remove copy action in generate report html

--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -89,11 +89,11 @@ jobs:
           path: allure-history
           key: allure-history-cache
 
-      - name: Generate Single File Allure Report
+      - name: Generate Single File Allure Report as HTML
         if: always()
         run: |
-          mkdir -p target/allure-results/history
-          cp -r allure-history/* target/allure-results/history/ || true
+#          mkdir -p target/allure-results/history
+#          cp -r allure-history/* target/allure-results/history/ || true
           allure generate target/allure-results --single-file --clean -o allure-report
 
       - name: Get Current Date and Time
