--- a/.github/workflows/cached-checking.yml
+++ b/.github/workflows/cached-checking.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Cache local Maven repository
         uses: actions/cache@v4
+        id: maven-cache
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml') }}
