--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -73,7 +73,7 @@ jobs:
 
       # Copy cached history to target/allure-results (if available)
       - name: Copy cached history to target/allure-results
-        if: steps.allure-history-cache.outputs.cache-hit != 'true'
+        if: steps.allure-history-cache.outputs.cache-hit = 'true'
         run: |
           mkdir -p target/allure-results/history
           cp -r allure-report-cached/history/* target/allure-results/history/
@@ -81,7 +81,7 @@ jobs:
       # Generate a new allure-report-cached with updated history
       - name: Generate new Allure cached report
         if: always()
-        run: allure generate target/allure-results -o allure-report-cached
+        run: allure generate target/allure-results --clean -o allure-report-cached
 
 #      # Save updated Allure history to cache
 #      - name: Save updated Allure history to cache
@@ -98,6 +98,7 @@ jobs:
         with:
           key: ${{ runner.os }}-allure-history
           path: allure-report-cached/history
+          overwrite: true
 
       # Generate final single-file HTML report
       - name: Generate final Allure HTML report
