--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -50,20 +50,13 @@ jobs:
       - name: Set DISPLAY variable
         run: export DISPLAY=:1
 
-#      # Restore Allure history from cache
-#      - name: Restore Allure history from cache
-#        if: always()
-#        uses: actions/cache@v4
-#        id: allure-history-cache
-#        with:
-#         path: allure-report-cached/history
-#         key: allure-history
-
       - name: Restore Allure history from cache
         id: allure-history-cache
         uses: actions/cache/restore@v4
         with:
-          key: ${{ runner.os }}-allure-history
+          key: ${{ runner.os }}-allure-history-${{ github.run_id }}
+          restore-keys: |
+            ${{ runner.os }}-allure-history-
           path: allure-report-cached/history
 
       - name: Run Maven Tests
@@ -71,34 +64,24 @@ jobs:
           DISPLAY: :1 # IMPORTANT: Set the DISPLAY environment variable
         run: mvn clean test -DretryType=immediate -DretryCount=1 -DthreadCount=3 -Dparallel=methods
 
-      # Copy cached history to target/allure-results (if available)
+      # Copy cached history to target/allure-results
       - name: Copy cached history to target/allure-results
-        if: steps.allure-history-cache.outputs.cache-hit == 'true'
+        if: always()
         run: |
           mkdir -p target/allure-results/history
-          cp -r allure-report-cached/history/* target/allure-results/history/
+          cp -r allure-report-cached/history/* target/allure-results/history/ || true
 
       # Generate a new allure-report-cached with updated history
       - name: Generate new Allure cached report
         if: always()
         run: allure generate target/allure-results --clean -o allure-report-cached
 
-#      # Save updated Allure history to cache
-#      - name: Save updated Allure history to cache
-#        if: always()
-#        uses: actions/cache@v4
-#        with:
-#          path: allure-report-cached/history
-#          key: allure-history
-#          save-always: true
-
       - name: Save updated Allure history to cache
         if: always()
         uses: actions/cache/save@v4
         with:
-          key: ${{ runner.os }}-allure-history
+          key: ${{ runner.os }}-allure-history-${{ github.run_id }}
           path: allure-report-cached/history
-          overwrite: true
 
       # Generate final single-file HTML report
       - name: Generate final Allure HTML report
