--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -57,24 +57,24 @@ jobs:
           key: ${{ runner.os }}-allure-history-${{ github.run_id }}
           restore-keys: |
             ${{ runner.os }}-allure-history-
-          path: allure-report-cached/history
+          path: allure-history
 
       - name: Run Maven Tests
         env:
           DISPLAY: :1 # IMPORTANT: Set the DISPLAY environment variable
         run: mvn clean test -DretryType=immediate -DretryCount=1 -DthreadCount=3 -Dparallel=methods
 
+      # Generate a new allure-report-cached with updated history
+      - name: Generate new Allure cached report
+        if: always()
+        run: allure generate target/allure-results --clean -o allure-report-cached
+
       # Copy cached history to target/allure-results
       - name: Copy cached history to target/allure-results
         if: always()
         run: |
           mkdir -p target/allure-results/history
-          cp -r allure-report-cached/history/* target/allure-results/history/ || true
-
-      # Generate a new allure-report-cached with updated history
-      - name: Generate new Allure cached report
-        if: always()
-        run: allure generate target/allure-results --clean -o allure-report-cached
+          cp -r allure-history/* target/allure-results/history/
 
       - name: Save updated Allure history to cache
         if: always()
