--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -51,10 +51,9 @@ jobs:
         run: export DISPLAY=:1
 
       - name: Restore Allure history from cache
-        id: allure-history-cache
         uses: actions/cache/restore@v4
         with:
-          key: ${{ runner.os }}-allure-history-${{ github.run_id }}
+          key: ${{ runner.os }}-allure-history
           restore-keys: |
             ${{ runner.os }}-allure-history-
           path: allure-history
