--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -40,6 +40,8 @@ jobs:
         run: sudo apt-get install -y gh
 
       - name: Get Previous Workflow Run ID
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           PREV_RUN_ID=$(gh api \
             /repos/${{ github.repository }}/actions/runs \
