--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -32,26 +32,14 @@ jobs:
 
       - name: Install Allure CLI
         run: |
-            curl -o allure.zip -L https://github.com/allure-framework/allure2/releases/download/2.32.0/allure-2.32.0.zip
-            sudo unzip -o allure.zip -d /opt/allure
-            sudo ln -s /opt/allure/allure-2.32.0/bin/allure /usr/bin/allure
+          curl -o allure.zip -L https://github.com/allure-framework/allure2/releases/download/2.32.0/allure-2.32.0.zip
+          sudo unzip -o allure.zip -d /opt/allure
+          sudo ln -s /opt/allure/allure-2.32.0/bin/allure /usr/bin/allure
 
       - name: Install GitHub CLI
         run: sudo apt-get install -y gh
 
-      - name: Get Previous Workflow Run ID
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          PREV_RUN_ID=$(gh api \
-            /repos/${{ github.repository }}/actions/runs \
-            --jq '.workflow_runs[1].id')
-          echo "prev_run_id=$PREV_RUN_ID" >> $GITHUB_ENV
 
-      - name: Get Current Date and Time
-        if: always()
-        id: date
-        run: echo "timestamp=$(date '+%Y-%m-%d_%H-%M-%S')" >> $GITHUB_ENV
 
       - name: Install Xvfb
         run: sudo apt-get update && sudo apt-get install -y xvfb
@@ -66,19 +54,22 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           key: ${{ runner.os }}-allure-history
-          restore-keys: |
-            ${{ runner.os }}-allure-history-${{ github.prev_run_id }}
           path: allure-history
+
+      - name: Delete old Allure history cache
+        #        env:
+        #          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh api \
+            -X DELETE \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            /repos/${{ github.repository }}/actions/caches \
+            -F key=${{ runner.os }}-allure-history
 
       - name: Run Maven Tests
         env:
           DISPLAY: :1 # IMPORTANT: Set the DISPLAY environment variable
         run: mvn clean test -DretryType=immediate -DretryCount=1 -DthreadCount=3 -Dparallel=methods
-
-      # Generate a new allure-report-cached with updated history
-      - name: Generate new Allure cached report
-        if: always()
-        run: allure generate target/allure-results --clean -o allure-report-cached
 
       # Copy cached history to target/allure-results
       - name: Copy cached history to target/allure-results
@@ -87,11 +78,16 @@ jobs:
           mkdir -p target/allure-results/history
           cp -r allure-history/* target/allure-results/history/
 
+      # Generate a new allure-report-cached with updated history
+      - name: Generate new Allure cached report
+        if: always()
+        run: allure generate target/allure-results --clean -o allure-report-cached
+
       - name: Save updated Allure history to cache
         if: always()
         uses: actions/cache/save@v4
         with:
-          key: ${{ runner.os }}-allure-history-${{ github.run_id }}
+          key: ${{ runner.os }}-allure-history
           path: allure-report-cached/history
 
       # Generate final single-file HTML report
@@ -99,37 +95,9 @@ jobs:
         if: always()
         run: allure generate target/allure-results --single-file --clean -o allure-report
 
-#      - name: Generate Allure Report with history
-#        if: always()
-#        run: allure generate target/allure-results -o allure-report-cached
-#
-#      - name: Cache updated Allure history
-#        if: always()
-#        run: |
-#          mkdir -p allure-history
-#          cp -r allure-report-cached/history allure-history/
-#
-#      - name: Prune history to keep latest 20 entries
-#        if: always()
-#        run: |
-#          cd allure-history
-#          ls -1t | tail -n +21 | xargs rm -rf || true
-#          cd ..
-#
-#      - name: Save updated history to cache
-#        uses: actions/cache@v4
-#        with:
-#          path: allure-history
-#          key: allure-history-cache
-#
-#      - name: Generate Single File Allure Report as HTML
-#        if: always()
-#        run:
-#          mkdir -p target/allure-results/history
-#          cp -r allure-history/* target/allure-results/history/ || true
-#          allure generate target/allure-results --single-file --clean -o allure-report
-
-
+      - name: Get Current Date and Time
+        if: always()
+        run: echo "timestamp=$(date '+%Y-%m-%d_%H-%M-%S')" >> $GITHUB_ENV
 
       - name: Rename Single File Report
         if: always()
