--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -57,8 +57,8 @@ jobs:
           path: allure-history
 
       - name: Delete old Allure history cache
-        #        env:
-        #          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh api \
             -X DELETE \
