--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -61,10 +61,10 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh api \
-            -X DELETE \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            /repos/${{ github.repository }}/actions/caches \
-            -F key=${{ runner.os }}-allure-history
+          --method DELETE \
+          -H "Accept: application/vnd.github+json" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          /repos/thai07t3/Sele3/actions/caches?key=${{ runner.os }}-allure-history
 
       - name: Run Maven Tests
         env:
